# asyar

./: .gitignore  CODE_OF_CONDUCT.md  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.mjs  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  diagnostics.rs  error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/agents/: mod.rs  tools_test.rs
src-tauri/src/application/: index_watcher.rs  service.rs
src-tauri/src/auth/: api_client.rs
src-tauri/src/clipboard_privacy/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: agents.rs  agents_test.rs  app.rs  applications.rs  clipboard_privacy.rs  crypto.rs  dynamic_commands.rs  extension_preferences.rs  extension_runtime.rs  extensions.rs  mcp.rs  mod.rs  runs.rs  secret_detection.rs  sf_symbols.rs  sync.rs  sync_e2ee.rs  system.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  keystore.rs  mnemonic.rs  mod.rs  sync_envelope.rs
src-tauri/src/extensions/: lifecycle.rs  mod.rs  scheduler.rs
src-tauri/src/hud_window/: mod.rs  service.rs
src-tauri/src/mcp/: install.rs  lifecycle.rs  mod.rs  sidecar.rs  supervisor.rs  tool_adapter.rs  transport.rs  types.rs
src-tauri/src/network/: service.rs
src-tauri/src/oauth/: pkce.rs
src-tauri/src/onboarding/: ai_persistence.rs  state.rs  window.rs
src-tauri/src/platform/: macos.rs
src-tauri/src/runs/: mod.rs  output_buffer.rs  registry.rs  types.rs
src-tauri/src/scripts/: header.rs  inline_scheduler.rs  mod.rs  scanner.rs
src-tauri/src/search_engine/: commands.rs  mod.rs  models.rs  ranker.rs
src-tauri/src/secret_detection/: luhn.rs  mod.rs  rules.rs
(+1365 files in other folders)
