[package]
name = "asyar"
version = "0.0.0"
description = "The open source alternative to Raycast"
authors = ["Khoshbin Ali <xoshbin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asyar"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
enigo = "0.1.3"
tauri-plugin-opener = "2"
thiserror = "1.0.63"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.2.1"
log = "0.4"
tauri-plugin-autostart = "2.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
cargo-clippy = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.2.1"
